# forecapp-api

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  NPOutputReader.py  README.md  app.py  cdktf.json  gunicorn.conf.py  main.py  main.ts  notes.md  np_helpers.py  package-lock.json  package.json  pyproject.toml  requirements-cdktf.txt  requirements-dev.txt  requirements.txt
.ebextensions/: securelistener-clb.config
app/: config.py  configuration.py  dataset.py  events.py  main.py
forecapp/: main.py
forecapp_api/: gunicorn.conf.py  main.py
forecapp_api/app/: config.py  events.py
scripts/: deploy.sh  docker.sh  infrastructure.sh  setup.sh
