[tool.poetry]
name = "forecapp-api"
version = "0.1.0"
description = ""
authors = ["Richard <richard@stromer.org>"]
readme = "README.md"
packages = [{include = "forecapp_api"}]

[tool.poetry.dependencies]
python = "~3.10"
neuralprophet = "0.6.0.rc1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
