[tool.poetry]
name = "forecapp-api"
version = "0.1.0"
description = ""
authors = ["Richard <richard@stromer.org>"]
readme = "README.md"
packages = [{include = "forecapp_api"}]

[tool.poetry.dependencies]
python = "~3.10"
neuralprophet = "0.6.0.rc1"
fastapi = "0.88.0"
uvicorn = {version = "0.20.0", extras = ["standard"]}
sentry-sdk = {version = "1.10.1", extras = ["fastapi"]}
gunicorn = "20.1.0"
fastapi-camelcase = "1.0.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
